# EcoAgent

./: .env.example  .gitignore  Dockerfile  README.md  add_test_data.py  agent.py  agent1qvkgc0dlqx_data.json  agent_core.py  agent_routes.py  agent_web_interface.py  app.py  auth.py  config.py  database.py  ecoagent.db.backup  gunicorn.conf.py  init_db.py  main.py  main.py.tmp  pyproject.toml  render.yaml  requirements.txt  run_agent.py  test_agents.py  test_agents_functionality.py  test_eco_agent.py  test_gemini.py
agent/: __init__.py  agent_core.py  agentmail_client.py  agentmail_client.py.new  eco_agent.py  fetchai_agent.py  sustainability_analyzer.py  templates.py
agents/: agent_manager.py  eco_advisor_agent.py  eco_monitor_agent.py
config/: config.py  email_templates.py
data/: sample_data.py
deploy/: cloudflare_worker.js
static/css/: agent_insights.css  analytics.css  chat.css  components.css  data_entry.css  modal.css  settings.css  style.css
static/js/: agent_insights.js  main.js
templates/: analytics.html  base.html  base_home.html  chat.html  data_entry.html  error.html  index.html  login.html  settings.html
